--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,22 @@ node_modules
 .idea/
 *.log
 cypress/downloads
+
+# Logs
+logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/*.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
