--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,27 +1,36 @@
 {
   // List of words that are considered to be spelled correctly
-  "cSpell.words": ["Vitesse", "Vite", "unocss", "vitest", "vueuse", "pinia", "demi", "antfu", "iconify", "intlify", "vitejs", "unplugin", "pnpm"],
-
+  "cSpell.words": [
+    "Vitesse",
+    "Vite",
+    "unocss",
+    "vitest",
+    "vueuse",
+    "pinia",
+    "demi",
+    "antfu",
+    "iconify",
+    "intlify",
+    "vitejs",
+    "unplugin",
+    "pnpm"
+  ],
   // i18n plugin settings
   "i18n-ally.sourceLanguage": "en",
   "i18n-ally.keystyle": "nested",
   "i18n-ally.localesPaths": "locales",
   "i18n-ally.sortKeys": true,
-
   // Tailwind CSS IntelliSense and avoid warning
   "css.customData": [
     ".vscode/tailwindcss.json"
   ],
-
   // Auto Format on Save
   "editor.formatOnSave": true,
-
   // Auto fix
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit",
     "source.organizeImports": "never"
   },
-
   // Use Prettier for JS, TS, Vue
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
@@ -32,35 +41,4 @@
   "[vue]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-
-  // // Silent the stylistic rules in you IDE, but still auto fix them
-  // "eslint.rules.customizations": [
-  //   { "rule": "style/*", "severity": "off" },
-  //   { "rule": "format/*", "severity": "off" },
-  //   { "rule": "*-indent", "severity": "off" },
-  //   { "rule": "*-spacing", "severity": "off" },
-  //   { "rule": "*-spaces", "severity": "off" },
-  //   { "rule": "*-order", "severity": "off" },
-  //   { "rule": "*-dangle", "severity": "off" },
-  //   { "rule": "*-newline", "severity": "off" },
-  //   { "rule": "*quotes", "severity": "off" },
-  //   { "rule": "*semi", "severity": "off" }
-  // ],
-
-  // // The following is optional.
-  // // It's better to put under project setting `.vscode/settings.json`
-  // // to avoid conflicts with working with different eslint configs
-  // // that does not support all formats.
-  // "eslint.validate": [
-  //   "javascript",
-  //   "javascriptreact",
-  //   "typescript",
-  //   "typescriptreact",
-  //   "vue",
-  //   "html",
-  //   "markdown",
-  //   "json",
-  //   "jsonc",
-  //   "yaml"
-  // ]
 }
