--- a/components.json
+++ b/components.json
@@ -4,7 +4,7 @@
   "typescript": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "src/styles/main.css",
+    "css": "src/styles/main.scss",
     "baseColor": "gray",
     "cssVariables": false
   },
