update: basic ui and vite setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,7 @@
     ]
   },
   "include": [
-    "src/shims.d.ts",
+    "shims.d.ts",
     "components.d.ts",
     "auto-imports.d.ts",
     "src/**/*.ts",
